--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": ">=7.1.3",
         "firebase/php-jwt": "^5.0",
+        "guzzlehttp/guzzle": "^6.3",
         "illuminate/redis": "5.5.*",
         "laravel/lumen-framework": "5.5.*",
         "predis/predis": "^1.1",
         "qcloud/weapp-sdk": "^2.1",
+        "symfony/var-dumper": "^4.1",
         "tymon/jwt-auth": "1.0.0-rc.1",
         "vlucas/phpdotenv": "~2.2"
     },
