--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "qcloud/weapp-sdk": "^2.1",
         "symfony/var-dumper": "^4.1",
         "tymon/jwt-auth": "1.0.0-rc.1",
-        "vlucas/phpdotenv": "~2.2"
+        "vlucas/phpdotenv": "~2.2",
+        "zhuzhichao/bank-card-info": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
